update vercel.json again

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "builds": [
       {
-        "src": "./app/index.js",
+        "src": "./bin/www",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/bin/www.js" }
+      { "src": "/(.*)", "dest": "/bin/www" }
     ]
 }
