back to default vercel.json and remove github workflow

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "builds": [
       {
-        "src": "./bin/www",
+        "src": "./package.json",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/config/routes.js" }
+      { "src": "/(.*)", "dest": "/bin/www" }
     ]
 }
