--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/app/index.js" }
+      { "src": "/(.*)", "dest": "/" }
     ]
 }
